--- a/public/register.html
+++ b/public/register.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container my-4 p-4 d-flex justify-content-between">
       <!-- <form action="/register" method="post" id="RForm"> -->
-      <form id="RForm">
+      <form id="RForm" class="w-100">
         <input
           class="form-control mb-4"
           placeholder="Name"
@@ -33,9 +33,9 @@
           name="email"
           type="email"
         />
+        <div id="error-message" class="text-danger mb-4"></div>
         <button class="btn btn-success" type="submit">Register</button>
       </form>
-      <div id="error-message" style="color: red"></div>
     </div>
     <script>
       const myform = document.getElementById("RForm");
@@ -59,7 +59,6 @@
             const errorData = await response.json();
             document.getElementById("error-message").innerHTML =
               errorData.message || "Registration failed";
-            console.log(errorData);
           } else {
             window.location.href = "/log";
           }
