about passport package

--- a/public/login-passport.html
+++ b/public/login-passport.html
@@ -23,6 +23,7 @@
           id="username"
           type="email"
         />
+        <label for="username">Password</label>
         <input
           class="form-control mb-4"
           placeholder="Password"
