make passport finally work

--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <div class="container my-4 p-4 d-flex flex-column">
       <a href="/register" class="btn btn-primary my-4"> Register </a>
-      <a href="login" class="btn btn-success my-4"> Log In </a>
+      <a href="/login" class="btn btn-success my-4"> Log In </a>
       <button class="btn btn-danger my-4" id="log" type="button">
         Get JSON INFO, check the console
       </button>
